assets/css/Animated-Text-Background.css
#animatedTextBackground {
  height: 50%;
  visibility: hidden;
  
}

#animatedTextHeading {
  
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-background-origin: padding-box;
  font-size: 16vmax;
  transform: translate3d(0,0,0);
  line-height: .8em;
  will-change: transform, opacity;
  letter-spacing: -1vmax;
  font-family: 'Arbutus Slab', serif;
  font-weight: 900;
  background: url("https://cdn.bootstrapstudio.io/placeholders/1400x800.png") center / cover repeat-x, rgb(77,62,70);
  }

.nav-item {
  padding: 1vw;
  padding-top: 2vh;
  font-size: 1.9vh;
  color: rgb(0,0,0) !important;
  font-weight: 400;
}

#navbar {
  /*transition: 0.4s;*/
  transition-delay: 3s;
  filter: brightness(NaN%) hue-rotate(0deg) invert(0%);
}

.col img {
  width: 100%;
  border-radius: 3px;
  box-shadow: 5px 5px 18px rgba(7,0,23,0.15);
  filter: saturate(0%);
}

#portfolio h3 {
  color: rgb(49,109,91);
}

#portfolio p {
  color: rgb(182,123,218);
  font-weight: 200;
}

#nav-work p {
}

#work p {
  color: rgb(67,114,160);
}

#work h3 {
  color: rgb(131,93,65);
}

#skills h3 {
  color: #c7d151;
}

#skills p {
  color: rgb(25,175,135);
}

.col.d-lg-flex.justify-content-lg-center.align-items-lg-center.col-md-8 {
}

.header-margins {
}

#moto p {
  color: rgb(150,153,175);
}

#moto h3 {
  color: rgb(177,191,184);
}

